Added train collision detection